--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -46,7 +46,7 @@ jobs:
         mkdir build
         cd build
         cmake -DTEST_FILE_DIR=/home/runner/data -DCMAKE_INSTALL_PREFIX=./install -DCMAKE_Fortran_FLAGS="-Werror -g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0 -fsanitize=address" -DCMAKE_C_FLAGS="-Werror -g -fprofile-arcs -ftest-coverage -fprofile-abs-path -O0 -fsanitize=address" -DCMAKE_BUILD_TYPE=Debug -DENABLE_DOCS=On ..
-        make VERBOSE=1
+        make -j2 VERBOSE=1
         make install
 
     - name: test
