--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,17 @@ if(NOT ${TEST_FILE_DIR} STREQUAL ".")
   endif()
 endif()
 
+# This function builds, links, and runs an ordinary C test.
+function(create_c_test_plain name)
+  set(testID "${name}")
+  add_executable(${testID} ${name}.c)
+  target_compile_definitions(${testID} PUBLIC -DKIND_${kind})
+  target_link_libraries(${testID} PRIVATE bufr::bufr_4)
+  target_include_directories(${testID} PRIVATE "${CMAKE_BINARY_DIR}/src")
+  add_dependencies(${testID} bufr_4)
+  add_test(NAME ${testID} COMMAND ${testID})
+endfunction()
+
 # Get the test data if we don't have it.
 if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/${BUFR_TAR}")
   message(STATUS "Downloading bufr test files...")
@@ -115,6 +126,8 @@ add_executable(${test_name} ${test_name}.c)
 add_dependencies(${test_name} bufr_4)
 target_link_libraries(${test_name} PRIVATE bufr::bufr_4)
 add_test(NAME ${test_name} COMMAND ${CMAKE_BINARY_DIR}/test/${test_name})
+
+create_c_test_plain(test_c_crwbmg)
 
 # Install testing scripts
 list(APPEND test_scripts
