adding test for ufbcup

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,17 +25,6 @@ if(NOT ${TEST_FILE_DIR} STREQUAL ".")
   endif()
 endif()
 
-# This function builds, links, and runs an ordinary C test.
-function(create_c_test_plain name)
-  set(testID "${name}")
-  add_executable(${testID} ${name}.c)
-  target_compile_definitions(${testID} PUBLIC -DKIND_${kind})
-  target_link_libraries(${testID} PRIVATE bufr::bufr_4)
-  target_include_directories(${testID} PRIVATE "${CMAKE_BINARY_DIR}/src")
-  add_dependencies(${testID} bufr_4)
-  add_test(NAME ${testID} COMMAND ${testID})
-endfunction()
-
 # Get the test data if we don't have it.
 if(NOT EXISTS "${CMAKE_CURRENT_BINARY_DIR}/${BUFR_TAR}")
   message(STATUS "Downloading bufr test files...")
@@ -149,16 +138,18 @@ list(APPEND test_scripts
   test_xbfmg.sh
 )
 
+# Run the test scripts for the utils.
 foreach(test_script ${test_scripts})
   execute_process( COMMAND ${CMAKE_COMMAND} -E copy
     ${CMAKE_CURRENT_SOURCE_DIR}/test_scripts/${test_script}
     ${CMAKE_BINARY_DIR}/bin/${test_script} )
 endforeach()
 
-# Create Fortran API tests, plus any other tests we want to run.
+# Create Fortran tests.
 foreach(kind ${test_kinds})
-  create_test_plain(test_misc  ${kind})
+  create_test_plain(test_misc ${kind})
   create_test_plain(test_ufbrw ${kind})
+  create_test_plain(test_ufbcup ${kind})
   foreach(innum RANGE 1 10)
     create_test(intest ${kind} ${innum})
   endforeach()
@@ -177,7 +168,7 @@ target_include_directories(${test_name} PRIVATE "${CMAKE_BINARY_DIR}/src")
 # c_interface tests
 foreach(test_src ${test_c_interface_srcs})
   string(REPLACE ".c" "" testPref ${test_src})
-  set(test     ${testPref}_4)
+  set(test ${testPref}_4)
   set(test_exe ${test}.x)
   add_executable(${test_exe} ${test_src})
   add_dependencies(${test_exe} bufr_4)
